--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 		<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar"><i></i></a>
 		<aside id="colorlib-aside" role="complementary" class="border js-fullheight">
 			<div class="text-center">
-				<div class="author-img" style="background-image: url(images/about.jpg);"></div>
+				<div class="author-img" style="background-image: url(images/aboutme.jpg);"></div>
 				<h1 id="colorlib-logo"><a href="index.html">Fatemeh Rahimi</a></h1>
 				<span class="position"><a href="#"></a>NLP/ML Researcher</span>
 			</div>
