add newlines for contact to appear

--- a/index.html
+++ b/index.html
@@ -726,7 +726,23 @@
 						</div>
 					</div>
 					<div class="row">
-						Coming soon...
+						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
+								Coming soon...
+								<br>
+								<br>
+								<br>
+								<br>
+								<br>
+								<br>
+								<br>
+								<br>
+								<br>
+								<br>
+								<br>
+								<br>
+								<br>
+						</div>
+						
 						<!-- <div class="col-md-4 col-sm-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="blog-entry">
 								<a href="blog.html" class="blog-img"><img src="images/blog-1.jpg" class="img-responsive" alt="HTML5 Bootstrap Template by colorlib.com"></a>
@@ -805,6 +821,14 @@
 								<div class="colorlib-text">
 									<p><a href="tel://">+782 414 7447</a></p>
 								</div>
+								<br>
+								<br>
+								<br>
+								<br>
+								<br>
+								<br>
+								<br>
+								<br>
 							</div>
 						</div>
 					
