added more projects

--- a/index.html
+++ b/index.html
@@ -618,7 +618,7 @@
 								<button class="btn active" onclick="filterSelection('all')"> All</button>
 								<button class="btn" onclick="filterSelection('curr')"> Current Projects</button>
 								<button class="btn" onclick="filterSelection('dal')"> DalhousieU Course Projects</button>
-								<button class="btn" onclick="filterSelection('people')"> ShirazU course Projects</button>
+								<button class="btn" onclick="filterSelection('shiraz')"> ShirazU course Projects</button>
 							</div>
 						</div>
 					</div>
@@ -668,7 +668,7 @@
 									  </div>
 									  <div class="timeline-label">
 										 <h2><a href="#">Information Retrieval of covid-19 academic papers using language models</a> <span>April 2020 - now</span></h2>
-										 <p>
+										 <p><b><a href="https://www.dal.ca/faculty/computerscience.html">Dalhousie University</a>, Halifax, Canada </b>
 										   <ul>
 											   <li>Dataset is from the TREC-COVID competition</li>
 											   <li>Working in this project as a Team.</li>
@@ -772,12 +772,140 @@
 										  </div>
 									   </div>
 									</article>
-									<article class="timeline-entry begin animate-box column curr dal" data-animate-effect="fadeInBottom">
-								   <div class="timeline-entry-inner">
-									  <div class="timeline-icon color-none">
-									  </div>
-								   </div>
-								</article>
+									<article class="timeline-entry animate-box column shiraz" data-animate-effect="fadeInLeft">
+									   <div class="timeline-entry-inner">
+										  <div class="timeline-icon color-3">
+											 <i class="fas fa-chalkboard-teacher"></i>
+										  </div>
+										  <div class="timeline-label">
+											 <h2><a href="#">Kitchen safety IOT project</a> <span>Dec 2017</span></h2>
+											 <p>
+											   <ul>
+												   <li>Senior Project for Undergrad in Shiraz Univerity</li>
+												   <li>webserver: Laravel Framework</li>
+												   <li>website: CodeIgniter Framework, bootstrap</li>
+												   <li><a href="files/seniorProject_documentation.pdf">Download Project Report</a></li>
+												   <li><a href="https://github.com/fatemerhmi/iot_temp_humidity">GitHub</a></li>
+											   </ul>
+											   <b>Descripiton:</b>
+												This project is designed to give a hand to people who work in the kitchen such as, people working in the 
+												kitchens of grand hotels, where the matter of temperature and heat turns out to be essential. They have 
+												giant refrigerators, freezers, huge kitchen, and a couple of storage to be taken care of.
+												To make sure that each section is being in an appropriate situation and the systems are functioning 
+												correctly, this project is designed to monitor a system to prevent any damage that might happen to these workers.
+												In this system, there exists a temperature and humidity sensor, the information which is receiving 
+												from the environment will be sent out through a Wi-Fi module to a web server, the web server will store 
+												the data. The user can access theses information from a website. There is also the feature of setting temperature 
+												of humidity limit so that the website can give the user some information about the history of the status 
+												and also email the user if any change accrued that went below the limit. 
+											 </p>
+										  </div>
+									   </div>
+									</article>
+									<article class="timeline-entry animate-box column shiraz" data-animate-effect="fadeInLeft">
+									   <div class="timeline-entry-inner">
+										  <div class="timeline-icon color-3">
+											 <i class="fas fa-chalkboard-teacher"></i>
+										  </div>
+										  <div class="timeline-label">
+											 <h2><a href="#">Client and server project</a> <span>Jul 2017</span></h2>
+											 <p>
+											   <ul>
+												   <li>Course project for Microprocessor Lab</li>
+												   <li>Introduced to serial programming, and sending packet through client to server and vice versa;</li>
+												   <li>Developed using python (server) and C (client);</li>
+											   </ul>
+										  </div>
+									   </div>
+									</article>
+									<article class="timeline-entry animate-box column shiraz" data-animate-effect="fadeInLeft">
+									   <div class="timeline-entry-inner">
+										  <div class="timeline-icon color-3">
+											 <i class="fas fa-chalkboard-teacher"></i>
+										  </div>
+										  <div class="timeline-label">
+											 <h2><a href="#">Compiler for python</a> <span>Jan 2017</span></h2>
+											 <p>
+											   <ul>
+												   <li>Course project for Compiler</li>
+												   <li>Developed using Yacc, Lex;</li>
+											   </ul>
+										  </div>
+									   </div>
+									</article>
+									<article class="timeline-entry animate-box column shiraz" data-animate-effect="fadeInLeft">
+									   <div class="timeline-entry-inner">
+										  <div class="timeline-icon color-3">
+											 <i class="fas fa-chalkboard-teacher"></i>
+										  </div>
+										  <div class="timeline-label">
+											 <h2><a href="#">Opportunistic network basic simulation project</a> <span>Jan 2017</span></h2>
+											 <p>
+											   <ul>
+												   <li>Course project for Concurrency</li>
+												   <li>Introduced to monitoring moving nodes and sending a message to oneanother randomly;</li>
+												   <li>Developed using Python;</li>
+											   </ul>
+										  </div>
+									   </div>
+									</article>
+									<article class="timeline-entry animate-box column shiraz" data-animate-effect="fadeInLeft">
+									   <div class="timeline-entry-inner">
+										  <div class="timeline-icon color-3">
+											 <i class="fas fa-chalkboard-teacher"></i>
+										  </div>
+										  <div class="timeline-label">
+											 <h2><a href="#">Degree overview project</a> <span>Jun 2016</span></h2>
+											 <p>
+											   <ul>
+												   <li>Course project for Software Engineering</li>
+												   <li>Introduced to Modeling and designing ERD, DFD and FHD.</li>
+												   <li>Developed using Python;</li>
+												   <li><a href="files/DegreeOvervie_prototype_presentation.pptx">Download prototype presentation</a> (in Persian)</li>
+												   <li><a href="files/degreeOverview_full_documentation.pdf">Download Project Dodumentation</a>(in Persian)</li>
+												   <li><a href="files/DegreeOverview-final-presentation.pptx">Download Final presentation</a>(in Persian)</li>
+											   </ul>
+										  </div>
+									   </div>
+									</article>
+									<article class="timeline-entry animate-box column shiraz" data-animate-effect="fadeInLeft">
+										<div class="timeline-entry-inner">
+										   <div class="timeline-icon color-3">
+											  <i class="fas fa-chalkboard-teacher"></i>
+										   </div>
+										   <div class="timeline-label">
+											  <h2><a href="#">File manipulation simulation</a> <span>Jul 2015</span></h2>
+											  <p>
+												<ul>
+													<li>Course project for Assembly.</li>
+													<li>Designed to work with system calls.</li>
+													<li>Developed using assembly 8086 - 32 bit.</li>
+												</ul>
+										   </div>
+										</div>
+									 </article>
+									<article class="timeline-entry animate-box column shiraz" data-animate-effect="fadeInLeft">
+										<div class="timeline-entry-inner">
+										   <div class="timeline-icon color-3">
+											  <i class="fas fa-chalkboard-teacher"></i>
+										   </div>
+										   <div class="timeline-label">
+											  <h2><a href="#">CMD simulator</a> <span>Jan 2013</span></h2>
+											  <p>
+												<ul>
+													<li>Course project for Fundamentals of Computer Programming.</li>
+													<li>Got familiar with advanced programming skills in Python.</li>
+													<li>Developed a simulation of the commands of CMD.</li>
+												</ul>
+										   </div>
+										</div>
+									 </article>
+									<article class="timeline-entry begin animate-box column curr dal shiraz" data-animate-effect="fadeInBottom">
+										<div class="timeline-entry-inner">
+										<div class="timeline-icon color-none">
+										</div>
+										</div>
+									</article>
 							 </div>
 						  </div> 
 
