--- a/index.html
+++ b/index.html
@@ -628,7 +628,7 @@
 								<article class="timeline-entry animate-box column curr" data-animate-effect="fadeInLeft">
 								   <div class="timeline-entry-inner">
 									  <div class="timeline-icon color-1">
-										 <i class="fas fa-chalkboard-teacher"></i>
+										 <i class="fas fa-laptop-code"></i>
 									  </div>
 									  <div class="timeline-label">
 										 <h2><a href="#">Using Multi-task Learning to improve Multi-label classifications task</a><span> March 2020 - now</span> </h2>
@@ -645,8 +645,8 @@
 								</article>
 								<article class="timeline-entry animate-box column curr" data-animate-effect="fadeInLeft">
 								   <div class="timeline-entry-inner">
-									  <div class="timeline-icon color-2">
-										 <i class="fas fa-chalkboard-teacher"></i>
+									  <div class="timeline-icon color-1">
+										 <i class="fas fa-laptop-code"></i>
 									  </div>
 									  <div class="timeline-label">
 										 <h2><a href="#">Learn Faster and Forget Slower via FAST and Stable Task Adaptation for
@@ -663,8 +663,8 @@
 								</article>
 								<article class="timeline-entry animate-box column curr" data-animate-effect="fadeInLeft">
 								   <div class="timeline-entry-inner">
-									  <div class="timeline-icon color-3">
-										 <i class="fas fa-chalkboard-teacher"></i>
+									  <div class="timeline-icon color-1">
+										 <i class="fas fa-laptop-code"></i>
 									  </div>
 									  <div class="timeline-label">
 										 <h2><a href="#">Information Retrieval of covid-19 academic papers using language models</a> <span>April 2020 - now</span></h2>
@@ -681,8 +681,8 @@
 								</article>
 								<article class="timeline-entry animate-box column dal" data-animate-effect="fadeInLeft">
 									<div class="timeline-entry-inner">
-										<div class="timeline-icon color-3">
-											<i class="fas fa-chalkboard-teacher"></i>
+										<div class="timeline-icon color-4">
+											<i class="fas fa-laptop-code"></i>
 										</div>
 										<div class="timeline-label">
 											<h2><a href="#">Query-focused Extractive Summarization using
@@ -715,8 +715,8 @@
 									</article>
 									<article class="timeline-entry animate-box column dal" data-animate-effect="fadeInLeft">
 									   <div class="timeline-entry-inner">
-										  <div class="timeline-icon color-3">
-											 <i class="fas fa-chalkboard-teacher"></i>
+										  <div class="timeline-icon color-4">
+											 <i class="fas fa-laptop-code"></i>
 										  </div>
 										  <div class="timeline-label">
 											 <h2><a href="#">Classification Of Imbalanced Dataset Using BERT Embeddings</a> <span>May 2019 - Aug 2019</span></h2>
@@ -746,8 +746,8 @@
 									</article>
 									<article class="timeline-entry animate-box column dal" data-animate-effect="fadeInLeft">
 									   <div class="timeline-entry-inner">
-										  <div class="timeline-icon color-3">
-											 <i class="fas fa-chalkboard-teacher"></i>
+										  <div class="timeline-icon color-4">
+											 <i class="fas fa-laptop-code"></i>
 										  </div>
 										  <div class="timeline-label">
 											 <h2><a href="#">Visual Analysis Of Harassment Classification In Twitter</a> <span>May 2019 - Aug 2019</span></h2>
@@ -774,8 +774,8 @@
 									</article>
 									<article class="timeline-entry animate-box column shiraz" data-animate-effect="fadeInLeft">
 									   <div class="timeline-entry-inner">
-										  <div class="timeline-icon color-3">
-											 <i class="fas fa-chalkboard-teacher"></i>
+										  <div class="timeline-icon color-5">
+											 <i class="fas fa-laptop-code"></i>
 										  </div>
 										  <div class="timeline-label">
 											 <h2><a href="#">Kitchen safety IOT project</a> <span>Dec 2017</span></h2>
@@ -804,8 +804,8 @@
 									</article>
 									<article class="timeline-entry animate-box column shiraz" data-animate-effect="fadeInLeft">
 									   <div class="timeline-entry-inner">
-										  <div class="timeline-icon color-3">
-											 <i class="fas fa-chalkboard-teacher"></i>
+										  <div class="timeline-icon color-5">
+											 <i class="ffas fa-laptop-code"></i>
 										  </div>
 										  <div class="timeline-label">
 											 <h2><a href="#">Client and server project</a> <span>Jul 2017</span></h2>
@@ -820,8 +820,8 @@
 									</article>
 									<article class="timeline-entry animate-box column shiraz" data-animate-effect="fadeInLeft">
 									   <div class="timeline-entry-inner">
-										  <div class="timeline-icon color-3">
-											 <i class="fas fa-chalkboard-teacher"></i>
+										  <div class="timeline-icon color-5">
+											 <i class="fas fa-laptop-code"></i>
 										  </div>
 										  <div class="timeline-label">
 											 <h2><a href="#">Compiler for python</a> <span>Jan 2017</span></h2>
@@ -835,8 +835,8 @@
 									</article>
 									<article class="timeline-entry animate-box column shiraz" data-animate-effect="fadeInLeft">
 									   <div class="timeline-entry-inner">
-										  <div class="timeline-icon color-3">
-											 <i class="fas fa-chalkboard-teacher"></i>
+										  <div class="timeline-icon color-5">
+											 <i class="fas fa-laptop-code"></i>
 										  </div>
 										  <div class="timeline-label">
 											 <h2><a href="#">Opportunistic network basic simulation project</a> <span>Jan 2017</span></h2>
@@ -851,8 +851,8 @@
 									</article>
 									<article class="timeline-entry animate-box column shiraz" data-animate-effect="fadeInLeft">
 									   <div class="timeline-entry-inner">
-										  <div class="timeline-icon color-3">
-											 <i class="fas fa-chalkboard-teacher"></i>
+										  <div class="timeline-icon color-5">
+											 <i class="fas fa-laptop-code"></i>
 										  </div>
 										  <div class="timeline-label">
 											 <h2><a href="#">Degree overview project</a> <span>Jun 2016</span></h2>
@@ -870,8 +870,8 @@
 									</article>
 									<article class="timeline-entry animate-box column shiraz" data-animate-effect="fadeInLeft">
 										<div class="timeline-entry-inner">
-										   <div class="timeline-icon color-3">
-											  <i class="fas fa-chalkboard-teacher"></i>
+										   <div class="timeline-icon color-5">
+											  <i class="fas fa-laptop-code"></i>
 										   </div>
 										   <div class="timeline-label">
 											  <h2><a href="#">File manipulation simulation</a> <span>Jul 2015</span></h2>
@@ -886,8 +886,8 @@
 									 </article>
 									<article class="timeline-entry animate-box column shiraz" data-animate-effect="fadeInLeft">
 										<div class="timeline-entry-inner">
-										   <div class="timeline-icon color-3">
-											  <i class="fas fa-chalkboard-teacher"></i>
+										   <div class="timeline-icon color-5">
+											  <i class="fas fa-laptop-code"></i>
 										   </div>
 										   <div class="timeline-label">
 											  <h2><a href="#">CMD simulator</a> <span>Jan 2013</span></h2>
