added presentation section

--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
 						<li><a href="#" data-nav-section="experience">Experience</a></li>
 						<li><a href="#" data-nav-section="texperience">Teaching Experience</a></li>
 						<li><a href="#" data-nav-section="project" onclick="setTimeout(filterSelection('all'), 3000)">projects</a></li>
+						<li><a href="#" data-nav-section="presentations">Presentations</a></li>
 						<li><a href="#" data-nav-section="blog">Blog</a></li>
 						<li><a href="#" data-nav-section="contact">Contact</a></li>
 					</ul>
@@ -88,8 +89,6 @@
 			</nav>
 
 			<div class="colorlib-footer">
-				<p><small> &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a> 
- Template is licensed under CC BY 3.0. </span> </small></p> 
 				<ul>
 					<!-- <li><a href="#"><i class="icon-facebook2"></i></a></li> -->
 					<li><a href="https://www.linkedin.com/in/fatemehrahimi"><i class="icon-linkedin2"></i></a></li>
@@ -97,6 +96,9 @@
 					<li><a href="https://github.com/fatemerhmi"><i class="fab fa-github"></i></a></li>
 					<!-- <li><a href="#"><i class="icon-instagram"></i></a></li> -->
 				</ul>
+				<br>
+				<p><small> &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a> 
+ Template is licensed under CC BY 3.0. </span> </small></p> 
 			</div>
 
 		</aside>
@@ -1007,6 +1009,53 @@
 							<p><a href="#" class="btn btn-primary btn-lg btn-load-more">Load more <i class="icon-reload"></i></a></p>
 						</div>
 					</div> -->
+				</div>
+			</section>
+
+			<section class="colorlib-education" data-section="presentations">
+				<div class="colorlib-narrow-content">
+					<div class="row">
+						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
+							<span class="heading-meta">Presentations</span>
+							<h2 class="colorlib-heading animate-box">Presentations</h2>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-md-12">
+				         <div class="timeline-centered">
+							 <article class="timeline-entry animate-box" data-animate-effect="fadeInRight">
+								<div class="timeline-entry-inner">
+								   <div class="timeline-icon color-2">
+									  <i class="fas fa-chalkboard-teacher"></i>
+								   </div>
+								   <div class="timeline-label">
+									   <h2><a href="#">Women in Machine Learning and Data Science (WiMLDS)</a> <span>Feb 2020</span></h2>
+									  <p>
+										  I gave a talk about how we can use deep language models to perform text summarization in the <a href="https://www.linkedin.com/posts/fatemehrahimi_women-in-machine-learningdata-science-meetup-activity-6639208170579382273-6CFZ">WiMLDS meetup</a>.
+										  <br>
+										  <a href="https://docs.google.com/presentation/d/1LqNqwWpB-LOy3ZVVFm6BYd4yRtsb1Nr-_MeuoVkkB9g/edit?usp=sharing">Presentation</a>
+										   <br>
+									  </p>
+								   </div>
+								</div>
+							 </article>
+					         <article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
+					            <div class="timeline-entry-inner">
+
+					               <div class="timeline-icon color-1">
+					                  <i class="fas fa-chalkboard-teacher"></i>
+					               </div>
+
+					               <div class="timeline-label">
+					                  <h2><a href="#">Poster presentation</a> <span>Nov 2019</span></h2>
+					                  <p>Rahimi F., Milios E., Matwin S., (2019, Nov). "Biomedical sentence-level and document-level representation learning", <a href="https://www.linkedin.com/posts/fatemehrahimi_cancwic2019-dalhousieu-cancwic-activity-6600063314816978944-Q4Cm">Poster session</a> presented at the Canadian computing conference for Women inTechnology, Mississauga, ON
+									  </p>
+					               </div>
+					            </div>
+					         </article>
+					      </div>
+					   </div>
+				   </div>
 				</div>
 			</section>
 
