--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
 					   				<div class="slider-text-inner js-fullheight">
 					   					<div class="desc">
 						   					<h1 style="color:#cccccc;">Hi! <br>I'm Fatemeh</h1>
-						   					<h2  style="color:#b3b3b3;">I am a currently studying master's of Computer Science in Dalhousie University.</h2>
-												<p><a class="btn btn-primary btn-learn">Download Resume <i class="icon-download4"></i></a></p>
+						   					<h2  style="color:#cccccc;">I am currently studying master's of Computer Science in Dalhousie University.</h2>
+												<p><a class="btn btn-primary btn-learn" style="color:#cccccc;" href="files/FatemehRahimiResume.pdf">Download Resume <i class="icon-download4"></i></a></p>
 											</div>
 					   				</div>
 					   			</div>
