--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
 					         </article>
 
 
-					         <article class="timeline-entry animate-box" data-animate-effect="fadeInRight">
+					         <article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
 					            <div class="timeline-entry-inner">
 					               <div class="timeline-icon color-2">
 					                  <i class="fas fa-school"></i>
@@ -444,7 +444,7 @@
 					         </article>
 
 
-					         <article class="timeline-entry animate-box" data-animate-effect="fadeInRight">
+					         <article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
 					            <div class="timeline-entry-inner">
 					               <div class="timeline-icon color-2">
 					                  <i class="fas fa-briefcase"></i>
@@ -483,7 +483,7 @@
 					            </div>
 					         </article>
 
-					         <article class="timeline-entry begin animate-box" data-animate-effect="fadeInBottom">
+					         <article class="timeline-entry begin animate-box" data-animate-effect="fadeInLeft">
 					            <div class="timeline-entry-inner">
 					               <div class="timeline-icon color-none">
 					               </div>
@@ -1023,7 +1023,7 @@
 					<div class="row">
 						<div class="col-md-12">
 				         <div class="timeline-centered">
-							 <article class="timeline-entry animate-box" data-animate-effect="fadeInRight">
+							 <article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
 								<div class="timeline-entry-inner">
 								   <div class="timeline-icon color-2">
 									  <i class="fas fa-chalkboard-teacher"></i>
