--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 					<ul>
 						<li class="active"><a href="#" data-nav-section="home">Home</a></li>
 						<li><a href="#" data-nav-section="about">About</a></li>
-						<li><a href="#" data-nav-section="services">Services</a></li>
+						<li><a href="#" data-nav-section="services">Soft Skills</a></li>
 						<li><a href="#" data-nav-section="skills">Skills</a></li>
 						<li><a href="#" data-nav-section="education">Education</a></li>
 						<li><a href="#" data-nav-section="experience">Experience</a></li>
@@ -98,7 +98,7 @@
 				</ul>
 				<br>
 				<p><small> &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a> 
- Template is licensed under CC BY 3.0. </span> </small></p> 
+ 					Template is licensed under CC BY 3.0. </span> </small></p> 
 			</div>
 
 		</aside>
@@ -152,9 +152,9 @@
 									<div class="about-desc">
 										<span class="heading-meta">About Me</span>
 										<h2 class="colorlib-heading">Who Am I?</h2>
-										<p><strong>Hi I'm Fatemeh Rahimi.</strong>I am a Research Assistant who is mainly focus on Natural language processing projects. </p>
-										<p>I have been in Computer Science field for about 7 years. The first 5 years I was mainly focused on software development and after that changed my focus to Data science projects. I am a confident, team player, motivated researcher in my field. I have listed a selected set of my projects in the PROJECTS section.</p>
-										<p>Currenly working on two intersting projects along side with my thesis. My thesis is mainly focused on building a Multi-task learning with State-of-the-art Language models for both bio-medical and general domain text.</p>
+										<p><strong>Hi I'm Fatemeh Rahimi.</strong> I am a Research Assistant who is mainly focusing on Natural language processing projects. </p>
+										<p>I have been in the Computer Science field for about 7 years. In the first 5 years I was mainly focused on software development and after that changed my focus to Data science projects. I am a confident, team player, and motivated researcher in my field. I have listed a selected set of my projects in the PROJECTS section.</p>
+										<p>CCurrently working on two interesting projects alongside with my thesis. My thesis is mainly focused on building Multi-task learning with State-of-the-art Language models for both bio-medical and general domain text.</p>
 									</div>
 								</div>
 							</div>
@@ -200,8 +200,7 @@
 								</span>
 								<div class="desc">
 									<h3>Research</h3>
-									<p>I have experience in research, designing and developing sophisticated ML solutions
-										for real world problems using traditional and cutting-edge ML solutions</p>
+									<p>I have experience in research, designing and developing sophisticated ML solutions for real-world problems using traditional and cutting-edge ML solutions.</p>
 								</div>
 							</div>
 						</div>
@@ -224,7 +223,7 @@
 								</span>
 								<div class="desc">
 									<h3>Skills</h3>
-									<p>Knowing that technology is evolving fast, made me passionate aboute learning new concepts and skills. Ability to implement novel ideas. </p>
+									<p>Knowing that technology is evolving fast, made me passionate about learning new concepts and skills. Ability to implement novel ideas. </p>
 								</div>
 							</div>
 						</div>
