--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 										<h2 class="colorlib-heading">Who Am I?</h2>
 										<p><strong>Hi I'm Fatemeh Rahimi.</strong> I am a Research Assistant who is mainly focusing on Natural language processing projects. </p>
 										<p>I have been in the Computer Science field for about 7 years. In the first 5 years I was mainly focused on software development and after that changed my focus to Data science projects. I am a confident, team player, and motivated researcher in my field. I have listed a selected set of my projects in the PROJECTS section.</p>
-										<p>CCurrently working on two interesting projects alongside with my thesis. My thesis is mainly focused on building Multi-task learning with State-of-the-art Language models for both bio-medical and general domain text.</p>
+										<p>Currently working on two interesting projects alongside with my thesis. My thesis is mainly focused on building Multi-task learning with State-of-the-art Language models for both bio-medical and general domain text.</p>
 									</div>
 								</div>
 							</div>
