--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@
 					                  <h2><a href="#">Practical Data Science Teacher Assistant - CSCI 1109</a> </h2>
 									  <p><b><a href="https://www.dal.ca/faculty/computerscience.html">Dalhousie University</a>, Halifax, Canada </b>
 										<ul>
-											<li>Sep 2020 - Dec 2020</li>
+											<!-- <li>Sep 2020 - Dec 2020</li> -->
 											<li>Jan 2020 – April 2020</li>
 											<li>Sept 2019 – Dec 2019</li>
 											<li>Attend Lab section every week to teach python and data science libraries.</li>
